--- a/JerseyCoffee/Supporting Files/Info.plist
+++ b/JerseyCoffee/Supporting Files/Info.plist
@@ -22,6 +22,20 @@
 	<string>101</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>NSExceptionAllowsInsecureHTTPLoads</key>
+			<true/>
+			<key>NSIncludesSubdomains</key>
+			<true/>
+			<key>jpush.cn</key>
+			<dict/>
+		</dict>
+	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>若不允许,您将无法正常给添加的咖啡,器具模块添加选取的照片</string>
 	<key>UILaunchStoryboardName</key>
